# Zilezia

./: .gitignore  Cargo.toml  README.md  README.org  REPO.md  REPO.org  starter.sh
LOCAL_back/: Cargo.toml
LOCAL_back/src/: main.rs
assets/: a.txt
back/: Cargo.toml
back/src/: .main.rs.swp  main.rs
common/: Cargo.toml  text.txt
common/src/: config.rs  models.rs
copied/: index.html  package-lock.json  package.json  webpack.config.js
copied/src/: geometry.ts  intro-to-3d.ts
front/: Cargo.toml  Trunk.toml  index.html  styles.css
front/src/: app.rs  index.rs  main.rs  router.rs  store.rs
front/src/components/: header.rs
front/src/pages/: demos.rs  home.rs  mod.rs  notfound.rs  raw_view.rs  readme.rs  well_be_back.rs
lain_wgl/: README.md  styles.css  toCanvas.js  viewer.html
lain_wgl/js/: Camera.js  ObjLoader.js  Shaders.js  gl.js
lain_wgl/wgsl/: fShader.wgsl  sky_fShader.wgsl  sky_vShader.wgsl  vShader.wgsl
public/: .env  robots.txt
src/: app.rs  db.rs  error.rs  handler.rs  lib.rs  logger.rs  main.rs  router.rs  state.rs  styles.css  user.rs
src/api/: auth.rs  mod.rs  projects.rs
src/components/: accordion.rs  auth.rs  cookie.rs  edit.rs  error.rs  form_input.rs  fur.rs  header.rs  loading.rs  metadata.rs  mod.rs  real.rs  toggle.rs  trash.rs
src/components/icon/: at.rs  cookie.rs  edit.rs  ig.rs  mod.rs  octo.rs  smull.rs  trash.rs  twt.rs
src/components/projects/: card.rs  mod.rs
src/models/: project.rs
src/pages/: auth.rs  home.rs  landing.rs  login.rs  mod.rs  not_found.rs  panel.rs  projects.rs  pvp.rs  template.rs  test.rs  tos.rs
src/utils/: auth.rs  mod.rs  password.rs
