[package]
name = "LOCAL_back"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
actix = "0.13.5"
actix-cors = "0.6"
actix-web = "4"
actix-web-actors = "4.3.1"
actix-rt = "2.5.0"
actix-files = "0.6.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
native-tls = { version = "0.2", features = ["alpn"] }
