[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
actix = "0.13.5"
actix-cors = "0.6"
actix-web = "4"
actix-web-actors = "4.3.1"
actix-web-lab = { version = "0.22.0", features = ["spa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "23.0.0"
dotenv = "0.15"
openssl-sys = { version = "0.9.103", features = ["vendored"] }
