[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "1"
log = "0.4.6"
wasm-logger = "^0.2"
reqwest = { version = "0.11", features = ["json"] }
gloo = "0.8.0"
gloo-net = "0.6.0"
dotenv = "0.15.0"
markdown = "1.0.0-alpha.21"
stylist = { version = "0.11.0", features = ["yew", "parser"] }
