[package]
name = "front"
version = "0.3.0"
edition = "2021"
authors = ["zilezia"]

[dependencies]
common = { path = "../common" }

yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9"
yew-router = "0.17"

reqwasm = "0.2"
wasm-bindgen = "^0.2"
wasm-logger = "^0.2"
wasm-bindgen-futures = "0.4"

serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "1"

log = "0.4.6"

gloo = "0.8"
gloo-net = "0.6"

dotenv = "0.15"

stylist = { version = "0.11", features = ["yew", "parser"] }
